# cow_utils

./: CMakeLists.txt
include/: buffer.hpp
include/cow/utils/: chunk.hpp
packetizer/: CMakeLists.txt
packetizer/include/: movie_packet.hpp  packetizer.hpp  sync_packet.hpp
packetizer/src/: packetizer.cpp  packetizer_test.cpp
test/: buffer_test.cpp  packetizer_test.cpp
